--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,5 +32,5 @@ jobs:
             id: check-ref
             uses: ./ # it's me
             with:
-                validPush: "branch-main/release/auto tag-v/production/manual"
+                validPush: "branch:main/release/auto tag:v/production/manual"
 
